--- a/src/main/webapp/app/pages/pageregister/pages.component.html
+++ b/src/main/webapp/app/pages/pageregister/pages.component.html
@@ -1,19 +1,28 @@
 <div class="header">
     <div class="container">
         <div class="row">
+            <div class="col-sm-4"></div>
             <div class="col-sm-6 col-sm-offset-3">
                 <div id="imaginary_container">
+                    <br><br>
                     <div class="input-group stylish-input-group">
                         <input type="text" id="buscador" (keyup.enter)="searchSong()" [(ngModel)]="search"
                                placeholder="Buscar artista o canción">
-                                <span class="input-group-addon">
-                                    <button (click)="searchSong()">
-                                        <span class="glyphicon glyphicon-search"></span>
-                                    </button>
-                                </span>
+                        <span class="input-group-addon">
+                            <a (click)="searchSong()">
+                                <span class="fa fa-search"></span>
+                            </a>
+                        </span>
                     </div>
+                    <br><br><br><br><br>
+                    <br><br><br><br><br>
+                    <br><br><br><br>
+                    <br><br><br><br>
+                    <br><br><br><br>
                 </div>
             </div>
+            <div class="col-sm-2"></div>
         </div>
     </div>
 </div>
+
