--- a/src/main/webapp/app/pages/pageregister/pageregister.css
+++ b/src/main/webapp/app/pages/pageregister/pageregister.css
@@ -1,4 +1,11 @@
-#header {
-    margin-top: 25%;
-    margin-left: 25%;
+
+.header {
+    background-color: whitesmoke!important;
+    width: 100%;
+    height: 100%;
+}
+
+#imaginary_container {
+    margin-left: 20%;
+    margin-right: 20%;
 }
