--- a/src/main/webapp/content/css/global.css
+++ b/src/main/webapp/content/css/global.css
@@ -2,8 +2,11 @@
 Bootstrap tweaks
 ===============================================================*/
 
-body, h1, h2, h3, h4 {
+h1, h2, h3, h4 {
     font-weight: 300;
+}
+body{
+    background-color: whitesmoke!important;
 }
 
 a {
