--- a/src/main/webapp/app/account/register/register.css
+++ b/src/main/webapp/app/account/register/register.css
@@ -122,7 +122,7 @@ input {
 
 .Registro {
     margin: 18px auto;
-    width: 304px;
+    width: 400px;
     margin-left: 26px!important;
     color: black;
     border-color: #d6cece!important;
@@ -156,7 +156,7 @@ input {
      -o-border-radius: 5px 5px 0 0;
      -ms-border-radius: 5px 5px 0 0;
      color: #363636;
-     width: 304px;
+     width: 400px;
  }
 
 .Registro input[type="email"] {
@@ -170,7 +170,7 @@ input {
     -o-border-radius: 5px 5px 0 0;
     -ms-border-radius: 5px 5px 0 0;
     color: #363636;
-    width: 304px;
+    width: 400px;
 }
 
 .Registro input[type="password"] {
@@ -186,7 +186,7 @@ input {
     -ms-border-radius: 0 0 5px 5px;
     color: #363636;
     margin-bottom: 20px;
-    width: 304px;
+    width: 400px;
 }
 
 .alert-success{
@@ -215,7 +215,7 @@ input {
     line-height: 48px;
     text-align: center;
     text-transform: uppercase;
-    width: 240px;
+    width: 340px;
 }
 
 .Registro input[type="submit"]:hover {
@@ -234,9 +234,18 @@ form{
     text-align: center;
     text-shadow: 1px 2px 1px  rgba(0,0,0,.5);
     padding-top: 40px;
-    margin-left: 69%;
+    margin-left: 80%;
 }
 
-p:hover {
-    text-shadow: 2px 2px 20px  grey, #fff 0 -1px 2px;
+.register{
+    background-color: #279bab !important;
+    color: white!important;
+    margin-left: 70%!important;
+    border-radius: 4px!important;
+    width: 70%!important;
+
+}
+.register:hover{
+    background-color: whitesmoke !important;
+    color: #279bab !important;
 }
