--- a/src/main/webapp/app/layouts/navbar/navbar.css
+++ b/src/main/webapp/app/layouts/navbar/navbar.css
@@ -15,6 +15,10 @@ body {
     color: rgba(0, 0, 0, 0.5);
     background: whitesmoke;
 }
+
+label{
+    font-size: 15px!important;
+}
 li:visited{
 color: #000000; text-decoration: none;
 
@@ -115,7 +119,7 @@ figure figcaption {
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
     transition: 0.5s;
-    background-color:whitesmoke!important;
+    background-color:white!important;
 }
 /*@media screen and (max-width: 1200px) {
     #fh5co-aside {
@@ -173,7 +177,6 @@ figure figcaption {
     text-decoration: none;
     letter-spacing: .1em;
     text-transform: uppercase;
-    font-size: 13px;
     font-weight: 600;
     position: relative;
     padding: 10px 10px;
@@ -182,6 +185,7 @@ figure figcaption {
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
     transition: 0.3s;
+    margin-left: 37px;
 }
 #fh5co-aside #fh5co-main-menu ul li a:after {
     content: "";
@@ -897,6 +901,7 @@ body.offcanvas #fh5co-main, body.offcanvas .fh5co-nav-toggle {
     background: #228896;
     color: #fff;
     border: 2px solid #228896;
+    margin-left: 40px!important;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
     background: #279bab !important;
