--- a/src/main/webapp/app/pages/pageartist/pages.css
+++ b/src/main/webapp/app/pages/pageartist/pages.css
@@ -49,7 +49,7 @@ h1{
 }
 .audio{
     align-content: center;
-    margin-top: 8%;
+    margin-top: 23%!important;
     width: 100%;
 }
 
@@ -82,39 +82,37 @@ h1{
 }
 .cover img{
     cursor: pointer;
-    width: 65px;
-    height: 65px;
+    width: 40px;
+    height: 40px;
     float: left;
-    margin-left: 32%;
+    margin-left: 77%;
     display: inline-block;
-    margin-top: 15%;
+    margin-top: 1%;
 }
+
 
 .cover:hover .overlayInfo{
     opacity: 0.9;
 }
-
 .botonyoutube{
-    margin-top: 15%;
-    margin-left: 32%;
-    background-color: red;
+    margin-top: 25%;
+    margin-left: 38%;
+    background-color: #228896;
     border-color: white;
     border-radius: 4px;
+    height: 31px;
+    width: 50px;
+    border-radius: 8px;
 }
 .botonyoutube:hover{
     background-color: white;
-    border-color: red;
+    border-color: #228896;
     cursor: pointer;
-    color:red;
-    border-radius: 4px;
+    color:#228896;
+    border-radius: 8px;
 }
 
-button:hover{
-    -webkit-box-shadow: 0px 0px 51px 4px rgb(255, 61, 112);
-    -moz-box-shadow: 0px 0px 51px 4px rgb(255, 0, 10);
-    box-shadow: 0px 0px 30px 4px rgb(255, 0, 10);
-    cursor:pointer;
-}
+
 
 .boton2{
     color:white!important;
