--- a/src/main/webapp/app/pages/pagehome/phome.css
+++ b/src/main/webapp/app/pages/pagehome/phome.css
@@ -153,10 +153,10 @@ h2 {
     position: relative;
 }
 .audio{
-    align-content: center;
-    margin-top: 8%;
-    width: 100%;
-}
+     align-content: center;
+     margin-top: 23%!important;
+     width: 100%;
+ }
 
 .audio:hover{
     cursor: pointer;
@@ -214,12 +214,12 @@ li:hover{
 }
 .cover img{
     cursor: pointer;
-    width: 65px;
-    height: 65px;
+    width: 40px;
+    height: 40px;
     float: left;
-    margin-left: 32%;
+    margin-left: 77%;
     display: inline-block;
-    margin-top: 15%;
+    margin-top: 1%;
 }
 
 .cover:hover .overlayInfo{
@@ -227,26 +227,23 @@ li:hover{
 }
 
 .botonyoutube{
-    margin-top: 15%;
-    margin-left: 34%;
-    background-color: red;
+    margin-top: 25%;
+    margin-left: 38%;
+    background-color: #228896;
     border-color: white;
     border-radius: 4px;
+    height: 31px;
+    width: 50px;
+    border-radius: 8px;
 }
 .botonyoutube:hover{
     background-color: white;
-    border-color: red;
+    border-color: #228896;
     cursor: pointer;
-    color:red;
-    border-radius: 4px;
+    color:#228896;
+    border-radius: 8px;
 }
 
-button:hover{
-    -webkit-box-shadow: 0px 0px 51px 4px rgb(255, 61, 112);
-    -moz-box-shadow: 0px 0px 51px 4px rgb(255, 0, 10);
-    box-shadow: 0px 0px 30px 4px rgb(255, 0, 10);
-    cursor:pointer;
-}
 
 .boton2{
     color:white!important;
