--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
         </div>
-        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('espana')">
+        <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('barcelona')">
             <div class="overlayInfo" (click)="topSong('ES')">
                 <div class="nombre">
                     <a class="hijo">ESPAÑA</a>
@@ -119,7 +119,7 @@
     <jhi-alert-error></jhi-alert-error>
     <div class="fondo" [ngStyle]="{'display':displayMain}">
         <!-- Page Content Holder -->
-        <div class="container">
+        <!--<div class="container">
             <div class="row">
                 <div class="col-sm-6 col-sm-offset-3">
                     <div id="imaginary_container">
@@ -135,7 +135,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
         <br><br>
         <div class="row">
             <nav class="navbar navbar-expand-sm bg-light navbar-light">
@@ -196,8 +196,8 @@
                             </div>
                         </div>
                     </div>
-                    <p class="tituloSong" style="text-align: center; color: black">{{data.name}}</p>
                 </div>
+                <p class="tituloSong" style="text-align: center; color: black">{{data.name}}</p>
             </div>
             <div class="backdrop" [ngStyle]="{'display':display}"></div>
             <div class="modal" tabindex="-1" role="dialog" [ngStyle]="{'display':display,'width':560}">
