--- a/src/main/webapp/app/pages/pagehome/phome.css
+++ b/src/main/webapp/app/pages/pagehome/phome.css
@@ -2,8 +2,6 @@
     DEMO STYLE
 */
 
-@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css");
-
 .fondo{
     background-size: cover;
     background-color: whitesmoke!important;
@@ -113,16 +111,6 @@ h2 {
 
 }
 
-#mundo:hover{
-    -webkit-box-shadow: 0px 0px 0px 0px;
-    cursor:pointer;
-    color:white!important;
-}
-
-.fa fa-globe{
-    height:100px!important;
-    width:100px!important;
-}
 #b{
     font-size: 19px!important;
 }
@@ -242,9 +230,9 @@ li:hover{
 }
 
 button:hover{
-    -webkit-box-shadow: 0px 0px 51px 4px rgb(255, 61, 112);
-    -moz-box-shadow: 0px 0px 51px 4px rgb(255, 0, 10);
-    box-shadow: 0px 0px 30px 4px rgb(255, 0, 10);
+    -webkit-box-shadow: 0 0 51px 4px rgb(255, 61, 112);
+    -moz-box-shadow: 0 0 51px 4px rgb(255, 0, 10);
+    box-shadow: 0 0 30px 4px rgb(255, 0, 10);
     cursor:pointer;
 }
 
@@ -450,7 +438,7 @@ a[aria-expanded="false"]::before, a[aria-expanded="true"]::before {
     display: block;
     position: absolute;
     right: 20px;
-    font-family: 'Glyphicons Halflings';
+    /*font-family: 'Glyphicons Halflings';*/
     font-size: 0.6em;
 }
 a[aria-expanded="true"]::before {
@@ -502,7 +490,7 @@ a.article, a.article:hover {
 
 .modal-body {
     position:relative;
-    padding:0px;
+    padding:0;
 }
 
 .close {
@@ -663,8 +651,6 @@ a.article, a.article:hover {
 }
 
 /* CUADRO SELECCION */
-
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
 
 html {
     height: 100%;
@@ -895,10 +881,3 @@ a {
     .box-info:hover {
         opacity: 1;
     }
-
-    .nombre a{
-
-
-    }
-
-
