--- a/src/main/webapp/app/pages/pageregister/pageregister.css
+++ b/src/main/webapp/app/pages/pageregister/pageregister.css
@@ -1,11 +1,43 @@
 
-.header {
-    background-color: whitesmoke!important;
-    width: 100%;
-    height: 100%;
+.infoDiv col-lg-3 col-md-4 col-sm-6 image-top {
+    padding-right: 83px!important;
+    padding-left: 15px!important;
+    margin-left: 100px!important;
 }
 
-#imaginary_container {
-    margin-left: 20%;
-    margin-right: 20%;
+.cover {
+    background-size: cover;
+    width: 200px;
+    height: 200px;
+    display: block;
+    margin: 10px;
+    position: relative;
+}
+
+.cover:hover .overlayInfo{
+    opacity: 0.9;
+}
+
+.overlayInfo {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: 0.5s ease;
+    background-color: #f5f5f5;
+
+}
+
+.cover img{
+    cursor: pointer;
+    width: 65px;
+    height: 65px;
+    float: left;
+    margin-left: 32%;
+    display: inline-block;
+    margin-top: 15%;
 }
