--- a/src/main/webapp/app/pages/pageregister/pages.component.html
+++ b/src/main/webapp/app/pages/pageregister/pages.component.html
@@ -58,8 +58,7 @@
                                      src="../../../content/images/heart-1.png">
                             </ng-template>
                             <button class="btn btn-primary botonyoutube" id="y2"
-                                    (click)="openModal(data.name, data.artistName)"><span
-                                class="glyphicon glyphicon-play"></span>Youtube
+                                    (click)="openModal(data.name, data.artistName)"><i class="fa fa-play" aria-hidden="true"></i>
                             </button>
                             <audio controls class="audio">
                                 <source src="{{data.previewURL}}" type="audio/mpeg">
