--- a/src/main/webapp/app/pages/pageartist/pages.css
+++ b/src/main/webapp/app/pages/pageartist/pages.css
@@ -1,10 +1,3 @@
-/*
-    DEMO STYLE
-*/
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
-
-
-@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css");
 
 .fondo{
     background-size: cover;
@@ -62,7 +55,8 @@ h1{
     font-size: 20px;
     position: relative;
     text-align: center;
-    font-family: Oswald, sans-serif;    font-size: 1.1em;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.1em;
     font-weight: 300;
     line-height: 1.7em;
     color: #999;
@@ -99,7 +93,6 @@ h1{
     margin-left: 38%;
     background-color: #228896;
     border-color: white;
-    border-radius: 4px;
     height: 31px;
     width: 50px;
     border-radius: 8px;
@@ -111,9 +104,6 @@ h1{
     color:#228896;
     border-radius: 8px;
 }
-
-
-
 .boton2{
     color:white!important;
     background-color: green!important;
@@ -145,12 +135,12 @@ only screen and (                min-resolution: 2dppx) {
 }
 
 body {
-    font-family: Oswald, sans-serif;
+    font-family: 'Oswald', sans-serif;
     background: #fafafa;
 }
 
 p {
-    font-family: Oswald, sans-serif;
+    font-family: 'Oswald', sans-serif;
     font-size: 1.1em;
     font-weight: 300;
     line-height: 1.7em;
