--- a/src/main/webapp/app/pages/pageregister/pageregister.css
+++ b/src/main/webapp/app/pages/pageregister/pageregister.css
@@ -1,10 +1,36 @@
-
-.infoDiv col-lg-3 col-md-4 col-sm-6 image-top {
-    padding-right: 83px!important;
-    padding-left: 15px!important;
-    margin-left: 100px!important;
+.audio{
+    align-content: center;
+    margin-top: 23%!important;
+    width: 100%;
 }
-
+.audio:hover{
+    cursor: pointer;
+}
+.backdrop {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: black;
+    opacity: 0.8;
+}
+.botonyoutube{
+    margin-top: 25%;
+    margin-left: 38%;
+    background-color: #228896;
+    border-color: white;
+    height: 31px;
+    width: 50px;
+    border-radius: 8px;
+}
+.botonyoutube:hover{
+    background-color: white;
+    border-color: #228896;
+    cursor: pointer;
+    color:#228896;
+    border-radius: 8px;
+}
 .cover {
     background-size: cover;
     width: 200px;
@@ -13,11 +39,42 @@
     margin: 10px;
     position: relative;
 }
-
 .cover:hover .overlayInfo{
     opacity: 0.9;
 }
-
+.cover img{
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    float: left;
+    margin-left: 77%;
+    display: inline-block;
+    margin-top: 1%;
+}
+.close {
+    position:absolute;
+    right:-30px;
+    top:0;
+    z-index:999;
+    font-size:3rem;
+    font-weight: normal;
+    color: red;
+    opacity:1;
+    cursor: pointer;
+}
+.infoDiv col-lg-3 col-md-4 col-sm-6 image-top {
+    padding-right: 83px!important;
+    padding-left: 15px!important;
+    margin-left: 100px!important;
+}
+.modal-body {
+    position:relative;
+    padding:0;
+}
+.modal-dialog {
+    max-width: 1000px;
+    margin: 100px auto 30px;
+}
 .overlayInfo {
     position: absolute;
     top: 0;
@@ -29,15 +86,27 @@
     opacity: 0;
     transition: 0.5s ease;
     background-color: #f5f5f5;
-
 }
-
-.cover img{
-    cursor: pointer;
-    width: 65px;
-    height: 65px;
-    float: left;
-    margin-left: 32%;
+.tituloSong{
+    position: relative;
+    text-align: center;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #020d1c!important;
+    margin-left: -48px!important;
+}
+span {
     display: inline-block;
-    margin-top: 15%;
+}
+@media (max-width: 600px){
+    .cover{
+        margin-left: 100px!important;
+    }
+}
+@media screen and (max-width: 400px) {
+    .cover{
+        margin-left: -30px!important;
+    }
 }
