--- a/src/main/webapp/app/pages/pagesong/pagesong.css
+++ b/src/main/webapp/app/pages/pagesong/pagesong.css
@@ -1,39 +1,122 @@
-/* ---------------------------------------------------
-    CONTENT HEADER
------------------------------------------------------ */
-.fondo{
-    margin-left: 17%;
-    width: 83%;
-    background-size: cover;
-    background: linear-gradient(#33b7ff,#020d1c);
+.container{
+    margin-left: 18%!important;
+    width: 75%;
+}
+.pic:before
+{
+    content: '';
+    margin-top: -59px;
+    margin-left: -215px;
+    position: absolute;
+    width: 500px;
+    height: 450px;
+    background: url('../../../content/images/avatar-david.png') center center;
+    -ms-transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+.pic:hover , .box1:hover , .box2:hover , .social1:hover , .social2:hover , .social3:hover
+{
+    box-shadow: 3px 3px 7px #888888;
+    cursor:pointer;
+}
+.pic
+{
+    box-shadow: 6px 6px 7px #888888;
+    width: 240px;
+    height: 240px;
+    position: relative;
+    overflow: hidden;
+    margin-top: 180px;
+    margin-left: 50px;
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
 
-h2{
-    color:white!important;
+.social1
+{
+    box-shadow: 6px 6px 7px #888888;
+    width:80px;
+    height:80px;
+    background-color:#3b5998;
+    margin-top: -86%;
+    margin-left: 277px;
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
 
-/* ---------------------------------------------------
-    CONTENT STYLE
------------------------------------------------------ */
-#fh5co-main {
-    width: 83%;
-    float: right;
-    -webkit-transition: 0.5s;
-    -o-transition: 0.5s;
-    transition: 0.5s;
+#cols{
+    margin-top: -4%!important;
 }
-.container-fluid {
-    min-height: 475px;
-    background: linear-gradient(#33b7ff,#020d1c);
-    background-size: auto;
+
+.social1 > i
+{
+    font-size:60px;
+    margin-top:13px;
+    margin-left:20px;
+    -ms-transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    color:#ffffff;
 }
-@media screen and (max-width: 1200px) {
-    #fh5co-main {
-        width: 70%;
-    }
+.social3
+{
+    box-shadow: 6px 6px 7px #888888;
+    width:80px;
+    height:80px;
+    background-color:#228896;
+    margin-top: -20px;
+    margin-left: 218px;
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
-@media screen and (max-width: 768px) {
-    #fh5co-main {
-        width: 100%;
-    }
+.social3 > i
+{
+    font-size:60px;
+    margin-top:9px;
+    margin-left:9px;
+    -ms-transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    color:#ffffff;
+}
+.banner-parallax {
+    height: 320px;
+    overflow: hidden;
+    line-height:  320px;
+    text-align: center;
+    background: url("http://www.brisaradio.es/attachments/Image/d1da86_938a4d0066e54ff4b93f2a67e02c7b8a.jpg?template=generic") no-repeat fixed center top;
+    position: relative;
+}
+.banner-parallax img{
+    position: absolute;
+    z-index: 9;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+}
+.banner-parallax .row{
+    margin-top: -100px;
+}
+.fabi-throne{
+    margin-top: -96px;
+}
+.about-us-wrap {
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-size: 14px;
+    padding-top: 75px;
+}
+.welcome-popgirl{
+    margin-top: 5px;
+    font-size: 22px;
+}
+
+#r{
+    margin-top:45px!important;
 }
