--- a/src/main/webapp/app/admin/docs/docs.component.html
+++ b/src/main/webapp/app/admin/docs/docs.component.html
@@ -1,2 +1,2 @@
-<iframe src="swagger-ui/index.html" width="100%" height="900" margin-left="10%" seamless
-    target="_top" title="Swagger UI" class="border-0"></iframe>
+
+<iframe src="swagger-ui/index.html" width="114%" height="900" seamless target="_top" title="Swagger UI" class="border-0 swagger"></iframe>
