--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -157,8 +157,8 @@
                             <img id="{{search.id}}" (click)="like(search.id)" alt="vacio"
                                  src="../../../content/images/heart-1.png">
                             <button class="btn btn-primary botonyoutube" id="y"
-                                    (click)="openModal(search.name, search.artistName)"><span
-                                class="glyphicon glyphicon-play"></span>Youtube
+                                    (click)="openModal(search.name, search.artistName)"><i
+                                class="glyphicon glyphicon-play"></i>
                             </button>
                             <audio controls class="audio">
                                 <source src="{{search.previewURL}}" type="audio/mpeg">
@@ -187,8 +187,8 @@
                                          src="../../../content/images/heart-1.png">
                                 </ng-template>
                                 <button class="btn btn-primary botonyoutube" id="y2"
-                                        (click)="openModal(data.name, data.artistName)"><span
-                                    class="glyphicon glyphicon-play"></span>Youtube
+                                        (click)="openModal(data.name, data.artistName)"><i
+                                    class="glyphicon glyphicon-play"></i>
                                 </button>
                                 <audio controls class="audio">
                                     <source src="{{data.previewURL}}" type="audio/mpeg">
