--- a/src/main/webapp/app/pages/pageregister/pageregister.css
+++ b/src/main/webapp/app/pages/pageregister/pageregister.css
@@ -1,6 +1,6 @@
 .audio{
     align-content: center;
-    margin-top: 23%!important;
+    margin-top: 43%!important;
     width: 100%;
 }
 .audio:hover{
@@ -15,11 +15,12 @@
     background: black;
     opacity: 0.8;
 }
-.botonyoutube{
+botonyoutube{
     margin-top: 25%;
     margin-left: 38%;
     background-color: #228896;
     border-color: white;
+    border-radius: 4px;
     height: 31px;
     width: 50px;
     border-radius: 8px;
@@ -31,6 +32,25 @@
     color:#228896;
     border-radius: 8px;
 }
+button{
+    margin-top: 25%;
+    margin-left: 38%;
+    background-color: #228896;
+    border-color: white;
+    height: 31px;
+    width: 50px;
+    border-radius: 8px;
+}
+
+#buscador{
+    width:90%!important;
+    margin-left: 10px!important;
+}
+.boton2{
+    color:white!important;
+    background-color: green!important;
+    margin-left: 40%!important;
+}
 .cover {
     background-size: cover;
     width: 200px;
@@ -39,8 +59,15 @@
     margin: 10px;
     position: relative;
 }
-.cover:hover .overlayInfo{
-    opacity: 0.9;
+.audio{
+    align-content: center;
+    margin-top: 23%!important;
+    width: 100%;
+}
+
+
+.audio:hover{
+    cursor: pointer;
 }
 .cover img{
     cursor: pointer;
@@ -50,6 +77,9 @@
     margin-left: 77%;
     display: inline-block;
     margin-top: 1%;
+}
+.cover:hover .overlayInfo{
+    opacity: 0.9;
 }
 .close {
     position:absolute;
