--- a/src/main/webapp/app/pages/pagesong/pages.component.html
+++ b/src/main/webapp/app/pages/pagesong/pages.component.html
@@ -84,10 +84,10 @@
                 </h3>
                 <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
                 </p>
-                <div class="social1">
-                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                <div class="social1" onclick="location.href='https://www.github.com/ironkk'">
+                    <i class="fa fa-github" aria-hidden="true"></i>
                 </div>
-                <div class="social3">
+                <div class="social3" onclick="location.href='https://www.linkedin.com/in/javier-manzano-varo-21536811a/'">
                     <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </div>
             </div>
