--- a/src/main/webapp/app/layouts/navbar/navbar.css
+++ b/src/main/webapp/app/layouts/navbar/navbar.css
@@ -256,6 +256,7 @@ h1, h2, h3, h4, h5, h6 {
 .fh5co-main-menu {
     text-align: center;
     text-transform: uppercase;
+    margin-left: -10px!important;
 
 }
 @media screen and (max-width: 1200px) {
