--- a/src/main/webapp/app/pages/pageartist/pages.css
+++ b/src/main/webapp/app/pages/pageartist/pages.css
@@ -55,8 +55,7 @@ h1{
     font-size: 20px;
     position: relative;
     text-align: center;
-    font-family: 'Oswald', sans-serif;
-    font-size: 1.1em;
+    font-family: Oswald, sans-serif;    font-size: 1.1em;
     font-weight: 300;
     line-height: 1.7em;
     color: #999;
