--- a/src/main/webapp/app/pages/pageregister/pages.component.html
+++ b/src/main/webapp/app/pages/pageregister/pages.component.html
@@ -27,9 +27,9 @@
                     <div>
                         <img id="{{search.id}}" (click)="like(search.id)" alt="vacio"
                              src="../../../content/images/heart-1.png">
-                        <button class="btn btn-primary botonyoutube" id="y"
-                                (click)="openModal(search.name, search.artistName)"><span
-                            class="glyphicon glyphicon-play"></span>Youtube
+                        <button class="botonyoutube" id="y"
+                                (click)="openModal(search.name, search.artistName)"><i
+                            class="glyphicon glyphicon-play"></i>
                         </button>
                         <audio controls class="audio">
                             <source src="{{search.previewURL}}" type="audio/mpeg">
